Ticket #4256: Updating media markup structure in all templates to prevent overflowing elements.

--- a/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
@@ -4064,7 +4064,6 @@ span.content-labels:after {
 }
 
 .media-holder .media-status {
-  display: block;
   margin-top: 30px;
 }
 .media-holder .media-status .status-name {
