--- a/drupal/sites/all/themes/checkdesk/assets/css/style.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style.css
@@ -4067,7 +4067,6 @@ span.content-labels:after {
 }
 
 .media-holder .media-status {
-  display: block;
   margin-top: 30px;
 }
 .media-holder .media-status .status-name {
